
	* bin/cygbuild.sh (CygbuildRunShell): Less output.
	Collect python output to file and dispay them only
	if verbose is set.
	(CygbuildBootVariablesGlobalMain):
	`cygbuild_opt_exclude_version_control' add .mtn.
	`cygbuild_opt_exclude_version_control' add INSTALL.
	(CygbuildPatchCheck): Display relative path to patch file.
	(CygbuildBootVariablesGlobalMain):
	`CYGBUILD_INSTALL_IGNORE' added ABOUT_NLS.
	(CygbuildInstallPackageDocs): Fix missing quotes from
	`CYGBUILD_INSTALL_IGNORE'.
	(CygbuildCmdStripMain): Add '**' start message.
	(CygbuildInstallExtraManualCompress): Ignore already compressed
	files.
	(CygbuildPatchCheck): Use relative patch in messages.
	(CygbuildCmdShadowDelete): Write message only if verbose on.
	(CygbuildCmdShadowMain): Display relative paths.
	(CygbuildCommandMain): New command line option -C|--color and
	new variable OPTION_COLOR.
	(CygbuildBootVariablesGlobalMain): Define CYGBUILD_COLOR_*
	variables.
	(CygbuildEcho): New
	(CygbuildMsgFilter): New. Support colored messages.
	(CygbuildProgramVersion): prepend '-- ' to output.
	(CygbuildProgramVersion): Add color support
	(CygbuildHelpShort): Remove non-essential option -x, -m and
	add new option -C.

2007-12-02  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.pl (ReadmeFix): Correct tags like: YYYY-MM-DD,
	Firstname Lastname and YYYY.

	* bin/cygbuild.sh:
	- Adjust indentation of all messages to '-- '
	(CygbuildCmdInstallCheckBinFiles):
	Check 1st line Perl and Python interpreter correctness.
	(CygbuildInstallFixInterpreterPerl): New.
	(CygbuildInstallFixInterpreterPython): New
	(CygbuildInstallFixInterpreterMain): New
	(CygbuildInstallFixPerlPacklist): New
	(CygbuildInstallFixMain): Use
	`CygbuildInstallFixInterpreterMain' and
	`CygbuildInstallFixPerlPacklist'.
	(CygbuildCmdAllMain): New.
	(CygbuildCommandMain): New command 'almostall'.
	Changed command 'upstream-download' to 'download'
	(Help): Document 'almostall'.
	(CygbuildBootVariablesGlobalMain): New variable